parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> OPEN_TAG declaration_list CLOSE_TAG
Rule 2     statement -> expression
Rule 3     expression -> expression PLUS term
Rule 4     declaration_list -> declaration_list declaration
Rule 5     declaration_list -> declaration
Rule 6     declaration -> var_declaration
Rule 7     declaration -> fun_declaration
Rule 8     declaration -> header_declaration
Rule 9     declaration -> class_declaration
Rule 10    declaration -> print_stmt
Rule 11    declaration -> selection_stmt
Rule 12    declaration -> iteration_stmt
Rule 13    print_stmt -> print_stmt ECHO STRING SEMICOLON
Rule 14    print_stmt -> print_stmt ECHO ID SEMICOLON
Rule 15    print_stmt -> empty
Rule 16    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMICOLON
Rule 17    class_declaration -> CLASS FUNCTION_NAME class_stmt
Rule 18    class_stmt -> LBLOCK attributes methods RBLOCK
Rule 19    class_stmt -> LBLOCK empty RBLOCK
Rule 20    class_stmt -> LBLOCK attributes RBLOCK
Rule 21    attributes -> attributes scope var_declaration
Rule 22    attributes -> scope var_declaration
Rule 23    methods -> methods scope fun_declaration
Rule 24    methods -> scope fun_declaration
Rule 25    scope -> PRIVATE
Rule 26    scope -> PUBLIC
Rule 27    scope -> PROTECTED
Rule 28    var_declaration -> ID SEMICOLON var_declaration
Rule 29    var_declaration -> ID SEMICOLON
Rule 30    var_declaration -> ID EQUAL NUMBER SEMICOLON var_declaration
Rule 31    var_declaration -> ID EQUAL NUMBER SEMICOLON
Rule 32    var_declaration -> ID EQUAL boolean SEMICOLON var_declaration
Rule 33    var_declaration -> ID EQUAL boolean SEMICOLON
Rule 34    var_declaration -> ID EQUAL ID SEMICOLON var_declaration
Rule 35    var_declaration -> ID EQUAL ID SEMICOLON
Rule 36    var_declaration -> AMPERSANT ID SEMICOLON var_declaration
Rule 37    var_declaration -> AMPERSANT ID SEMICOLON
Rule 38    fun_declaration -> FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
Rule 39    params -> param_list
Rule 40    params -> empty
Rule 41    param_list -> param_list COMMA param
Rule 42    param_list -> param
Rule 43    param -> ID
Rule 44    param -> ID LBRACKET RBRACKET
Rule 45    compount_stmt -> LBLOCK print_stmt local_declarations print_stmt statement_list print_stmt RBLOCK
Rule 46    local_declarations -> local_declarations var_declaration
Rule 47    local_declarations -> empty
Rule 48    statement_list -> statement_list statement
Rule 49    statement_list -> empty
Rule 50    statement -> expression_stmt
Rule 51    statement -> compount_stmt
Rule 52    statement -> selection_stmt
Rule 53    statement -> iteration_stmt
Rule 54    statement -> return_stmt
Rule 55    expression_stmt -> expression SEMICOLON
Rule 56    expression_stmt -> SEMICOLON
Rule 57    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 58    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 59    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 60    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 61    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 62    selection_stmt -> print_stmt
Rule 63    iteration_stmt -> FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 64    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 65    iteration_stmt -> print_stmt
Rule 66    return_stmt -> RETURN SEMICOLON
Rule 67    return_stmt -> RETURN expression SEMICOLON
Rule 68    expression -> var EQUAL expression
Rule 69    expression -> simple_expression
Rule 70    expression -> var EQUAL AMPERSANT ID
Rule 71    var -> ID
Rule 72    var -> ID LBRACKET expression RBRACKET
Rule 73    simple_expression -> additive_expression relop additive_expression
Rule 74    simple_expression -> additive_expression
Rule 75    relop -> LESS
Rule 76    relop -> LESSEQUAL
Rule 77    relop -> GREATER
Rule 78    relop -> GREATEREQUAL
Rule 79    relop -> DEQUAL
Rule 80    relop -> ISEQUAL
Rule 81    additive_expression -> additive_expression addop term
Rule 82    additive_expression -> term
Rule 83    additive_expression -> term MINUSMINUS
Rule 84    additive_expression -> term PLUSPLUS
Rule 85    addop -> PLUS
Rule 86    addop -> MINUS
Rule 87    term -> term mulop factor
Rule 88    term -> factor
Rule 89    mulop -> TIMES
Rule 90    mulop -> DIVIDE
Rule 91    factor -> LPAREN expression RPAREN
Rule 92    factor -> var
Rule 93    factor -> call
Rule 94    factor -> NUMBER
Rule 95    factor -> boolean
Rule 96    call -> ID LPAREN args RPAREN
Rule 97    args -> args_list
Rule 98    args -> empty
Rule 99    args_list -> args_list COMMA expression
Rule 100   args_list -> expression
Rule 101   boolean -> TRUE
Rule 102   boolean -> FALSE
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 36 37 70
BREAK                : 60 61
CASE                 : 60
CLASS                : 17
CLOSE_TAG            : 1
COLON                : 60 61
COMMA                : 41 99
DEFAULT              : 61
DEQUAL               : 79
DIVIDE               : 90
ECHO                 : 13 14
ELSE                 : 58
EQUAL                : 30 31 32 33 34 35 68 70
FALSE                : 102
FOR                  : 63
FUNCTION             : 38
FUNCTION_NAME        : 17 38
GREATER              : 77
GREATEREQUAL         : 78
ID                   : 14 28 29 30 31 32 33 34 34 35 35 36 37 43 44 70 71 72 96
IF                   : 57 58
ISEQUAL              : 80
LBLOCK               : 18 19 20 45
LBRACKET             : 44 72
LESS                 : 75
LESSEQUAL            : 76
LPAREN               : 16 38 57 58 59 63 64 91 96
MINUS                : 86
MINUSMINUS           : 83
NUMBER               : 30 31 60 94
OPEN_TAG             : 1
PLUS                 : 3 85
PLUSPLUS             : 84
PRIVATE              : 25
PROTECTED            : 27
PUBLIC               : 26
RBLOCK               : 18 19 20 45
RBRACKET             : 44 72
REQUIRE              : 16
RETURN               : 66 67
RPAREN               : 16 38 57 58 59 63 64 91 96
SEMICOLON            : 13 14 16 28 29 30 31 32 33 34 35 36 37 55 56 60 61 63 63 66 67
STRING               : 13 16
SWITCH               : 59
TIMES                : 89
TRUE                 : 101
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

additive_expression  : 63 73 73 74 81
addop                : 81
args                 : 96
args_list            : 97 99
attributes           : 18 20 21
boolean              : 32 33 95
call                 : 93
class_declaration    : 9
class_stmt           : 17
compount_stmt        : 38 51
declaration          : 4 5
declaration_list     : 1 4
empty                : 15 19 40 47 49 98
expression           : 2 3 55 57 58 63 64 67 68 72 91 99 100
expression_stmt      : 50
factor               : 87 88
fun_declaration      : 7 23 24
header_declaration   : 8
iteration_stmt       : 12 53
local_declarations   : 45 46
methods              : 18 23
mulop                : 87
param                : 41 42
param_list           : 39 41
params               : 38
print_stmt           : 10 13 14 45 45 45 62 65
program              : 0
relop                : 73
return_stmt          : 54
scope                : 21 22 23 24
selection_stmt       : 11 52
simple_expression    : 69
statement            : 48 57 58 58 59 60 61 63 64
statement_list       : 45 48
term                 : 3 81 82 83 84 87
var                  : 59 68 70 92
var_declaration      : 6 21 22 28 30 32 34 36 46 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPEN_TAG declaration_list CLOSE_TAG

    OPEN_TAG        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPEN_TAG . declaration_list CLOSE_TAG
    (4) declaration_list -> . declaration_list declaration
    (5) declaration_list -> . declaration
    (6) declaration -> . var_declaration
    (7) declaration -> . fun_declaration
    (8) declaration -> . header_declaration
    (9) declaration -> . class_declaration
    (10) declaration -> . print_stmt
    (11) declaration -> . selection_stmt
    (12) declaration -> . iteration_stmt
    (28) var_declaration -> . ID SEMICOLON var_declaration
    (29) var_declaration -> . ID SEMICOLON
    (30) var_declaration -> . ID EQUAL NUMBER SEMICOLON var_declaration
    (31) var_declaration -> . ID EQUAL NUMBER SEMICOLON
    (32) var_declaration -> . ID EQUAL boolean SEMICOLON var_declaration
    (33) var_declaration -> . ID EQUAL boolean SEMICOLON
    (34) var_declaration -> . ID EQUAL ID SEMICOLON var_declaration
    (35) var_declaration -> . ID EQUAL ID SEMICOLON
    (36) var_declaration -> . AMPERSANT ID SEMICOLON var_declaration
    (37) var_declaration -> . AMPERSANT ID SEMICOLON
    (38) fun_declaration -> . FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
    (16) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (17) class_declaration -> . CLASS FUNCTION_NAME class_stmt
    (13) print_stmt -> . print_stmt ECHO STRING SEMICOLON
    (14) print_stmt -> . print_stmt ECHO ID SEMICOLON
    (15) print_stmt -> . empty
    (57) selection_stmt -> . IF LPAREN expression RPAREN statement
    (58) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (59) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (60) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (61) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (62) selection_stmt -> . print_stmt
    (63) iteration_stmt -> . FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (64) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (65) iteration_stmt -> . print_stmt
    (103) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    ID              shift and go to state 12
    AMPERSANT       shift and go to state 13
    FUNCTION        shift and go to state 14
    REQUIRE         shift and go to state 15
    CLASS           shift and go to state 16
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    CASE            shift and go to state 20
    DEFAULT         shift and go to state 21
    FOR             shift and go to state 22
    WHILE           shift and go to state 23
    ECHO            reduce using rule 103 (empty -> .)
    CLOSE_TAG       reduce using rule 103 (empty -> .)

  ! ID              [ reduce using rule 103 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 103 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 103 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 103 (empty -> .) ]
  ! CLASS           [ reduce using rule 103 (empty -> .) ]
  ! IF              [ reduce using rule 103 (empty -> .) ]
  ! SWITCH          [ reduce using rule 103 (empty -> .) ]
  ! CASE            [ reduce using rule 103 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 103 (empty -> .) ]
  ! FOR             [ reduce using rule 103 (empty -> .) ]
  ! WHILE           [ reduce using rule 103 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    print_stmt                     shift and go to state 9
    selection_stmt                 shift and go to state 10
    iteration_stmt                 shift and go to state 11
    empty                          shift and go to state 17

state 3

    (1) program -> OPEN_TAG declaration_list . CLOSE_TAG
    (4) declaration_list -> declaration_list . declaration
    (6) declaration -> . var_declaration
    (7) declaration -> . fun_declaration
    (8) declaration -> . header_declaration
    (9) declaration -> . class_declaration
    (10) declaration -> . print_stmt
    (11) declaration -> . selection_stmt
    (12) declaration -> . iteration_stmt
    (28) var_declaration -> . ID SEMICOLON var_declaration
    (29) var_declaration -> . ID SEMICOLON
    (30) var_declaration -> . ID EQUAL NUMBER SEMICOLON var_declaration
    (31) var_declaration -> . ID EQUAL NUMBER SEMICOLON
    (32) var_declaration -> . ID EQUAL boolean SEMICOLON var_declaration
    (33) var_declaration -> . ID EQUAL boolean SEMICOLON
    (34) var_declaration -> . ID EQUAL ID SEMICOLON var_declaration
    (35) var_declaration -> . ID EQUAL ID SEMICOLON
    (36) var_declaration -> . AMPERSANT ID SEMICOLON var_declaration
    (37) var_declaration -> . AMPERSANT ID SEMICOLON
    (38) fun_declaration -> . FUNCTION FUNCTION_NAME LPAREN params RPAREN compount_stmt
    (16) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMICOLON
    (17) class_declaration -> . CLASS FUNCTION_NAME class_stmt
    (13) print_stmt -> . print_stmt ECHO STRING SEMICOLON
    (14) print_stmt -> . print_stmt ECHO ID SEMICOLON
    (15) print_stmt -> . empty
    (57) selection_stmt -> . IF LPAREN expression RPAREN statement
    (58) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (59) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (60) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (61) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (62) selection_stmt -> . print_stmt
    (63) iteration_stmt -> . FOR LPAREN var_declaration SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (64) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (65) iteration_stmt -> . print_stmt
    (103) empty -> .

  ! shift/reduce conflict for CLOSE_TAG resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
    CLOSE_TAG       shift and go to state 24
    ID              shift and go to state 12
    AMPERSANT       shift and go to state 13
    FUNCTION        shift and go to state 14
    REQUIRE         shift and go to state 15
    CLASS           shift and go to state 16
    IF              shift and go to state 18
    SWITCH          shift and go to state 19
    CASE            shift and go to state 20
    DEFAULT         shift and go to state 21
    FOR             shift and go to state 22
    WHILE           shift and go to state 23
    ECHO            reduce using rule 103 (empty -> .)

  ! CLOSE_TAG       [ reduce using rule 103 (empty -> .) ]
  ! ID              [ reduce using rule 103 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 103 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 103 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 103 (empty -> .) ]
  ! CLASS           [ reduce using rule 103 (empty -> .) ]
  ! IF              [ reduce using rule 103 (empty -> .) ]
  ! SWITCH          [ reduce using rule 103 (empty -> .) ]
  ! CASE            [ reduce using rule 103 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 103 (empty -> .) ]
  ! FOR             [ reduce using rule 103 (empty -> .) ]
  ! WHILE           [ reduce using rule 103 (empty -> .) ]

    declaration                    shift and go to state 25
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    header_declaration             shift and go to state 7
    class_declaration              shift and go to state 8
    print_stmt                     shift and go to state 9
    selection_stmt                 shift and go to state 10
    iteration_stmt                 shift and go to state 11
    empty                          shift and go to state 17

state 4

    (5) declaration_list -> declaration .

    CLOSE_TAG       reduce using rule 5 (declaration_list -> declaration .)
    ID              reduce using rule 5 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 5 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 5 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 5 (declaration_list -> declaration .)
    CLASS           reduce using rule 5 (declaration_list -> declaration .)
    IF              reduce using rule 5 (declaration_list -> declaration .)
    SWITCH          reduce using rule 5 (declaration_list -> declaration .)
    CASE            reduce using rule 5 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 5 (declaration_list -> declaration .)
    FOR             reduce using rule 5 (declaration_list -> declaration .)
    WHILE           reduce using rule 5 (declaration_list -> declaration .)
    ECHO            reduce using rule 5 (declaration_list -> declaration .)


state 5

    (6) declaration -> var_declaration .

    CLOSE_TAG       reduce using rule 6 (declaration -> var_declaration .)
    ID              reduce using rule 6 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 6 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 6 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 6 (declaration -> var_declaration .)
    CLASS           reduce using rule 6 (declaration -> var_declaration .)
    IF              reduce using rule 6 (declaration -> var_declaration .)
    SWITCH          reduce using rule 6 (declaration -> var_declaration .)
    CASE            reduce using rule 6 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 6 (declaration -> var_declaration .)
    FOR             reduce using rule 6 (declaration -> var_declaration .)
    WHILE           reduce using rule 6 (declaration -> var_declaration .)
    ECHO            reduce using rule 6 (declaration -> var_declaration .)


state 6

    (7) declaration -> fun_declaration .

    CLOSE_TAG       reduce using rule 7 (declaration -> fun_declaration .)
    ID              reduce using rule 7 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> fun_declaration .)
    CLASS           reduce using rule 7 (declaration -> fun_declaration .)
    IF              reduce using rule 7 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 7 (declaration -> fun_declaration .)
    CASE            reduce using rule 7 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> fun_declaration .)
    FOR             reduce using rule 7 (declaration -> fun_declaration .)
    WHILE           reduce using rule 7 (declaration -> fun_declaration .)
    ECHO            reduce using rule 7 (declaration -> fun_declaration .)


state 7

    (8) declaration -> header_declaration .

    CLOSE_TAG       reduce using rule 8 (declaration -> header_declaration .)
    ID              reduce using rule 8 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 8 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 8 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 8 (declaration -> header_declaration .)
    CLASS           reduce using rule 8 (declaration -> header_declaration .)
    IF              reduce using rule 8 (declaration -> header_declaration .)
    SWITCH          reduce using rule 8 (declaration -> header_declaration .)
    CASE            reduce using rule 8 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 8 (declaration -> header_declaration .)
    FOR             reduce using rule 8 (declaration -> header_declaration .)
    WHILE           reduce using rule 8 (declaration -> header_declaration .)
    ECHO            reduce using rule 8 (declaration -> header_declaration .)


state 8

    (9) declaration -> class_declaration .

    CLOSE_TAG       reduce using rule 9 (declaration -> class_declaration .)
    ID              reduce using rule 9 (declaration -> class_declaration .)
    AMPERSANT       reduce using rule 9 (declaration -> class_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> class_declaration .)
    REQUIRE         reduce using rule 9 (declaration -> class_declaration .)
    CLASS           reduce using rule 9 (declaration -> class_declaration .)
    IF              reduce using rule 9 (declaration -> class_declaration .)
    SWITCH          reduce using rule 9 (declaration -> class_declaration .)
    CASE            reduce using rule 9 (declaration -> class_declaration .)
    DEFAULT         reduce using rule 9 (declaration -> class_declaration .)
    FOR             reduce using rule 9 (declaration -> class_declaration .)
    WHILE           reduce using rule 9 (declaration -> class_declaration .)
    ECHO            reduce using rule 9 (declaration -> class_declaration .)


state 9

    (10) declaration -> print_stmt .
    (13) print_stmt -> print_stmt . ECHO STRING SEMICOLON
    (14) print_stmt -> print_stmt . ECHO ID SEMICOLON
    (62) selection_stmt -> print_stmt .
    (65) iteration_stmt -> print_stmt .
